Update chat screen

--- a/src/app/presentation/pages/orthographyPage/orthographyPage.component.html
+++ b/src/app/presentation/pages/orthographyPage/orthographyPage.component.html
@@ -9,9 +9,11 @@
             <app-my-message
                 text="Write text for checking"
             ></app-my-message>
+            <app-typing-loader></app-typing-loader>
         </div>
-
+        
     </div>
+    <app-text-message-box></app-text-message-box>
 
     <!-- messageBox -->
 
