--- a/src/app/presentation/components/chat-bubbles/chatMessage/chatMessage.component.html
+++ b/src/app/presentation/components/chat-bubbles/chatMessage/chatMessage.component.html
@@ -1,4 +1,4 @@
-<div class=" col-start-1 col-end-9 rounded-lg">
+<div class=" col-start-1 col-end-9 rounded-lg mt-5">
 
     <div class="flex flex-row items-start">
 
