--- a/src/app/presentation/components/chat-bubbles/myMessage/myMessage.component.html
+++ b/src/app/presentation/components/chat-bubbles/myMessage/myMessage.component.html
@@ -1,4 +1,4 @@
-<div class=" col-start-6 col-end-12 p-3 rounded-lg">
+<div class=" col-start-6 col-end-12 p-3 rounded-lg mt-5">
 
     <div class="flex justify-start items-center flex-row-reverse">
 
