--- a/src/app/template/chatTemplate/chatTemplate.component.html
+++ b/src/app/template/chatTemplate/chatTemplate.component.html
@@ -25,23 +25,11 @@
         </div>
         
     </div>
-    <!-- <app-text-message-box
+    <app-text-message-box
         placeholder="Write here ..."
-        (onMessage)="haldleMessage($event)"
-    ></app-text-message-box> -->
+        (onMessage)="handleMessage($event)"
+    ></app-text-message-box>
 
-    <!-- <app-text-message-box-file
-        placeholder="Write here ..."
-        (onMessage)="handleMessageWithFile($event)"
-    /> -->
-
-    <app-text-message-box-select
-        placeholder="Write here ..."
-        (onMessage)="handleMessageWithSelect($event)"
-        [options]="[ {id: '1', text: '1'}, {id: '2', text: '2'}, {id: '3', text: '3'},]"
-    />
-
-    <!-- messageBox -->
 
 
 </div>
